@@ -9,6 +9,9 @@
     * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...
     * 0944 FIX: oracle_tablespaces: fixed calculation of space left and number of remaining increments...
 
+    Multisite:
+    * 0945 FIX: Sidebar snapin "Problem hosts": Now excludes hosts and services in downtime
+
     WATO:
     * 0990 FIX: Fix HTTP error handling in bulk inventory...
 
